<resources>
	<string name="app_name">MobileOffice</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_settings">Settings</string>

	<string name="opportunity">商机</string>
	<string name="customer">客户</string>
	<string name="contract">合同</string>
	<string name="business">业务</string>
	<string name="product">产品</string>
	<string name="contact">联系人</string>
</resources>
